--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react-virtualized": "^9.18.7",
+    "mobx": "^5.5.2",
+    "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
